@@ -1,3 +1,6 @@
+2002-01-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* tools/expack.cc: slightly fixed local getline(). We use this local getline() to be able to accept windows linefeeds on linux and vice versa.
+
 2002-01-07  Dancer Vesperman  <dancer@users.sourceforge.net>
 
 	* tools/expack.cc broken. Locally provided getline() fails to operate correctly on the last line. Use standard fstream getline() instead. Made sure it handles MAC line-endings.
